--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
@@ -18,20 +18,23 @@
     "@types/lodash": "^4.17.20",
     "expo": "~53.0.20",
     "expo-device": "^7.1.4",
+    "expo-haptics": "~14.1.4",
+    "expo-localization": "^16.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-purchases": "^8.5.3",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.1.8",
+    "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "typescript": "^5.8.3"
   },
