feat: new features added

--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.yemekbulucu",
+      "bundleIdentifier": "com.yemekbulucu.app",
       "buildNumber": "1",
       "requireFullScreen": false,
       "infoPlist": {
