--- a/package.json
+++ b/package.json
@@ -6,11 +6,29 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "env:dev": "node scripts/set-environment.js dev",
+    "env:test": "node scripts/set-environment.js test", 
+    "env:prod": "node scripts/set-environment.js prod",
+    "clean-console": "node scripts/remove-console-logs.js",
+    "prebuild": "npm run clean-console",
+    "build:production": "eas build --platform all --profile production",
+    "build:preview": "eas build --platform all --profile preview",
+    "build:ios": "eas build --platform ios --profile production",
+    "build:android": "eas build --platform android --profile production",
+    "submit:ios": "eas submit --platform ios",
+    "submit:android": "eas submit --platform android",
+    "test": "echo \"Tests not implemented yet\" && exit 1",
+    "lint": "echo \"Linting not configured yet\"",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-firebase/analytics": "^22.4.0",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/crashlytics": "^22.4.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
@@ -19,23 +37,32 @@
     "expo": "~53.0.20",
     "expo-device": "^7.1.4",
     "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-localization": "^16.1.6",
     "expo-notifications": "^0.31.4",
-    "expo-speech": "^13.1.7",
+    "expo-speech": "~13.1.7",
     "expo-status-bar": "~2.2.3",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-device-info": "^14.0.4",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-purchases": "^8.5.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-static-block": "^7.27.1",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "@types/uuid": "^10.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.8.3"
   },
   "private": true
