--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "env:dev": "node scripts/set-environment.js dev",
     "env:test": "node scripts/set-environment.js test",
@@ -29,15 +29,13 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-native-firebase/analytics": "^22.4.0",
-    "@react-native-firebase/app": "^22.4.0",
-    "@react-native-firebase/crashlytics": "^22.4.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@supabase/supabase-js": "^2.47.8",
     "@types/lodash": "^4.17.20",
     "expo": "~53.0.20",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "^14.1.5",
@@ -45,10 +43,12 @@
     "expo-notifications": "^0.31.4",
     "expo-speech": "~13.1.7",
     "expo-status-bar": "~2.2.3",
+    "i18next": "^25.3.4",
     "lodash": "^4.17.21",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.6.1",
     "react-native": "0.79.5",
     "react-native-device-info": "^14.0.4",
     "react-native-get-random-values": "^1.11.0",
