--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
@@ -37,6 +38,7 @@
     "expo": "~53.0.20",
     "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
+    "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-localization": "^16.1.6",
@@ -51,12 +53,12 @@
     "react-i18next": "^15.6.1",
     "react-native": "0.79.5",
     "react-native-device-info": "^14.0.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-purchases": "^8.5.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0"
@@ -65,7 +67,6 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-class-static-block": "^7.27.1",
     "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.8.3"
