--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "env:dev": "node scripts/set-environment.js dev",
-    "env:test": "node scripts/set-environment.js test",
-    "env:prod": "node scripts/set-environment.js prod",
+    "env:prod": "set EXPO_PUBLIC_ENVIRONMENT=production && expo start",
+    "env:test": "set EXPO_PUBLIC_ENVIRONMENT=testing && expo start",
+    "env:dev": "set EXPO_PUBLIC_ENVIRONMENT=development && expo start",
     "clean-console": "node scripts/remove-console-logs.js",
     "prebuild": "npm run clean-console",
     "build:production": "eas build --platform all --profile production",
@@ -19,7 +19,6 @@
     "submit:ios": "eas submit --platform ios",
     "submit:android": "eas submit --platform android",
     "test": "echo \"Tests not implemented yet\" && exit 1",
-    "test:revenuecat": "node test-revenuecat.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
@@ -36,7 +35,7 @@
     "@react-navigation/stack": "^7.4.2",
     "@supabase/supabase-js": "^2.47.8",
     "@types/lodash": "^4.17.20",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-font": "~13.3.2",
