--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.yemekbulucuai.app",
-      "buildNumber": "18",
+      "buildNumber": "19",
       "requireFullScreen": false,
       "infoPlist": {
         "NSCameraUsageDescription": "Malzemelerin fotoğrafını çekmek için kamera erişimi gerekiyor.",
@@ -44,20 +44,28 @@
         "backgroundColor": "#E8F5E8"
       },
       "edgeToEdgeEnabled": true,
-      "permissions": ["RECORD_AUDIO", "INTERNET", "ACCESS_NETWORK_STATE"],
+      "permissions": ["RECORD_AUDIO", "INTERNET", "ACCESS_NETWORK_STATE", "BILLING"],
       "package": "com.yemekbulucu.app",
-      "versionCode": 1
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "plugins": ["expo-localization", "expo-font"],
+    "plugins": [
+      "expo-localization", 
+      "expo-font",
+      "expo-dev-client"
+    ],
     "owner": "shado7",
     "extra": {
       "eas": {
         "projectId": "e3e037bb-7ebe-4355-b267-013c4b959976"
-      }
+      },
+      "revenueCatIosKey": "appl_aAFWiEGXPfzbOgzBYpVMbfvojQD",
+      "revenueCatAndroidKey": "",
+      "revenueCatOffering": "Default",
+      "revenueCatEntitlement": "Premium Subscription"
     }
   }
 }
