--- a/eas.json
+++ b/eas.json
@@ -6,14 +6,36 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true,
+        "resourceClass": "m-medium"
+      },
+      "env": {
+        "EXPO_PUBLIC_REVENUECAT_IOS_API_KEY": "appl_aAFWiEGXPfzbOgzBYpVMbfvojQD",
+        "EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY": "goog_test_key"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": false,
+        "resourceClass": "m-medium",
+        "buildConfiguration": "Release"
+      },
+      "env": {
+        "EXPO_PUBLIC_REVENUECAT_IOS_API_KEY": "appl_aAFWiEGXPfzbOgzBYpVMbfvojQD",
+        "EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY": "goog_test_key"
+      }
     },
     "production": {
       "ios": {
-        "resourceClass": "m-medium"
+        "resourceClass": "m-medium",
+        "buildConfiguration": "Release"
+      },
+      "env": {
+        "EXPO_PUBLIC_REVENUECAT_IOS_API_KEY": "appl_aAFWiEGXPfzbOgzBYpVMbfvojQD",
+        "EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY": "goog_test_key"
       }
     }
   },
