--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "@supabase/supabase-js": "^2.47.8",
     "@types/lodash": "^4.17.20",
     "expo": "53.0.22",
+    "expo-blur": "^14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-localization": "^16.1.6",
     "expo-notifications": "^0.31.4",
