chore: Yemek Bulucu name changed to YemekbulAI

--- a/eas.json
+++ b/eas.json
@@ -46,7 +46,7 @@
         "ascAppId": "6749386118",
         "appleTeamId": "QD633BK5SD",
         "language": "tr",
-        "companyName": "Yemek Bulucu",
+        "companyName": "YemekbulAI",
         "bundleIdentifier": "com.yemekbulucuai.app"
       }
     }
