--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Yemek Bulucu",
-    "slug": "yemek-bulucu",
+    "name": "YemekbulAI",
+    "slug": "yemekbulai",
     "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
