--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Yemek Bulucu - AI Destekli Tarif Uygulaması",
-  "short_name": "Yemek Bulucu",
+  "name": "YemekbulAI - AI Destekli Tarif Uygulaması",
+  "short_name": "YemekbulAI",
   "description": "Elinizde olan malzemelerle AI destekli tarif bulun. Offline çalışır, hızlı ve akıllı.",
   "version": "1.0.0",
   "start_url": "/",
@@ -153,7 +153,7 @@
   },
   "protocol_handlers": [
     {
-      "protocol": "web+yemekbulucu",
+      "protocol": "web+yemekbulai",
       "url": "/?recipe=%s"
     }
   ],
