feat: new features

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,33 @@
-# RevenueCat API Keys
+# Environment Configuration
 # Bu dosyayı .env olarak kopyalayın ve gerçek değerlerle doldurun
-# Sadece iOS için RevenueCat kullanıyoruz
+# Copy this file to .env and fill in your values
 
+# ⚠️ SECURITY WARNING ⚠️
+# NEVER commit the .env file to version control!
+# Production builds MUST use Supabase Edge Functions, not direct API keys
+
+# === SUPABASE CONFIGURATION (Required) ===
+EXPO_PUBLIC_SUPABASE_URL=your_supabase_project_url
+EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# === OPENAI CONFIGURATION ===
+# ⚠️ DEVELOPMENT ONLY - NEVER use in production!
+# Production uses Supabase Edge Functions for security (App Store Guideline 2.5.2)
+EXPO_PUBLIC_OPENAI_API_KEY=sk-your_openai_key_for_dev_only
+
+# === IMAGE SEARCH APIS (Optional) ===
+EXPO_PUBLIC_GOOGLE_CUSTOM_SEARCH_API_KEY=your_google_api_key
+EXPO_PUBLIC_GOOGLE_CSE_ID=your_google_cse_id
+EXPO_PUBLIC_UNSPLASH_API_KEY=your_unsplash_api_key
+
+# === REVENUECAT CONFIGURATION ===
 # iOS API Key (RevenueCat Dashboard > Project Settings > API Keys > iOS)
-EXPO_PUBLIC_REVENUECAT_IOS_API_KEY=PUT_YOUR_IOS_API_KEY_HERE
+EXPO_PUBLIC_REVENUECAT_API_KEY_IOS=appl_your_ios_key
+EXPO_PUBLIC_REVENUECAT_API_KEY_ANDROID=goog_your_android_key
+
+# === ENVIRONMENT ===
+# Options: development | testing | production
+EXPO_PUBLIC_ENVIRONMENT=development
+
+# === DEBUG FLAGS ===
+EXPO_PUBLIC_DEBUG_PREMIUM=false
