--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "env:dev": "set EXPO_PUBLIC_ENVIRONMENT=development && expo start",
     "clean-console": "node scripts/remove-console-logs.js",
     "prebuild": "npm run clean-console",
-    "build:production": "eas build --platform all --profile production",
-    "build:preview": "eas build --platform all --profile preview",
+    "build:production": "eas build --platform ios --profile production",
+    "build:preview": "eas build --platform ios --profile preview",
     "build:ios": "eas build --platform ios --profile production",
-    "build:android": "eas build --platform android --profile production",
     "submit:ios": "eas submit --platform ios",
-    "submit:android": "eas submit --platform android",
     "test": "echo \"Tests not implemented yet\" && exit 1",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
